--- a/devel/libmemcache/Makefile
+++ b/devel/libmemcache/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/11 15:31:20 joerg Exp $
 #
 
 DISTNAME=		libmemcache-1.4.0.b9
@@ -15,4 +15,5 @@ USE_PKGLOCALEDIR=	yes
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
 
+.include "../../devel/sysexits/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
