--- a/misc/dialog/Makefile
+++ b/misc/dialog/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.28 2005/05/22 20:08:14 jlam Exp $
+# $NetBSD: Makefile,v 1.29 2005/09/30 22:02:56 wiz Exp $
 
 DISTNAME=	dialog-1.0-20050911
 PKGNAME=	${DISTNAME:C/-2/.2/}
+PKGREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	ftp://invisible-island.net/dialog/
 EXTRACT_SUFX=	.tgz
