--- a/games/xdemineur/Makefile
+++ b/games/xdemineur/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2005/04/11 21:45:58 tv Exp $
+# $NetBSD: Makefile,v 1.20 2005/08/20 17:50:24 bouyer Exp $
 #
 
 DISTNAME=       xdemineur-2.1.1
@@ -12,5 +12,6 @@ COMMENT=	Minesweeper game for the X Window System
 
 USE_IMAKE=	YES
 
+.include "../../devel/sysexits/buildlink3.mk"
 .include "../../graphics/xpm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
