--- a/net/iplog/Makefile
+++ b/net/iplog/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2005/04/11 21:46:48 tv Exp $
+# $NetBSD: Makefile,v 1.10 2005/05/22 20:08:24 jlam Exp $
 #
 
 DISTNAME=	iplog-2.2.3
@@ -26,5 +26,6 @@ post-install:
 	${INSTALL_DATA_DIR} ${EGDIR}
 	${INSTALL_DATA} ${WRKSRC}/example-iplog.conf ${EGDIR}/iplog.conf
 
+.include "../../net/libpcap/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
