--- a/net/choparp/Makefile
+++ b/net/choparp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2002/11/09 02:23:22 itojun Exp $
+# $NetBSD: Makefile,v 1.6 2003/07/17 22:51:02 grant Exp $
 #
 
 DISTNAME=	choparp-20021107
@@ -8,6 +8,8 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=choparp/}
 MAINTAINER=	dbj@NetBSD.org
 HOMEPAGE=	http://choparp.sf.net/
 COMMENT=	Simple proxy arp daemon
+
+NOT_FOR_PLATFORM=	Interix-*-* # does not have bpf(4) device
 
 MANCOMPRESSED_IF_MANZ=	yes
 
