--- a/net/arpd/Makefile
+++ b/net/arpd/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/02/21 20:26:12 hubertf Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:46:44 tv Exp $
 #
 
 DISTNAME=	arpd
@@ -9,6 +9,7 @@ MASTER_SITES=	ftp://subzero.campus.luth.se/pub/arpd/
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	ARP daemon
 
+NOT_FOR_PLATFORM=	Interix-*-* # does not have bpf(4) device
 
 MAKE_ENV+=	BINDIR=${PREFIX}/sbin
 
