--- a/net/entropy/Makefile
+++ b/net/entropy/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2005/08/17 15:31:52 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/10/24 17:01:43 tv Exp $
 #
 
 DISTNAME=		entropy_rsa-${ENTROPY_VERSION}
@@ -13,7 +13,7 @@ HOMEPAGE=		http://entropy.stop1984.com/
 COMMENT=		Anonymous peer-to-peer networking node (similar to Freenet)
 
 GNU_CONFIGURE=		yes
-USE_TOOLS+=		gmake
+USE_TOOLS+=		autoconf gmake
 
 ENTROPY_VERSION=	0.9.1-439
 
