--- a/net/wminet/Makefile
+++ b/net/wminet/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2004/04/18 07:13:16 snj Exp $
+# $NetBSD: Makefile,v 1.5 2005/04/11 21:47:02 tv Exp $
 
 DISTNAME=	wmnet-1.2
 PKGNAME=	wminet-1.2
@@ -8,6 +8,8 @@ MASTER_SITES=	ftp://ftp.enteract.com/users/rneswold/
 MAINTAINER=	coto@core.de
 HOMEPAGE=	http://www.enteract.com/~rneswold/
 COMMENT=	Dockable network monitor
+
+NOT_FOR_PLATFORM=	Interix-*-* # no userland protocol stack support
 
 USE_X11BASE=	YES
 
