--- a/finance/xfinans/Makefile
+++ b/finance/xfinans/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2001/03/22 13:32:22 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2004/01/20 12:14:59 agc Exp $
 #
 
 DISTNAME=		xfinans-5.9
@@ -31,6 +31,6 @@ post-install:
 	${CP} ${WRKSRC}/../variables ${PREFIX}/share/examples/Xfinans
 	${CP} ${WRKSRC}/../categories ${PREFIX}/share/examples/Xfinans
 	${CP} ${WRKSRC}/../category_engine ${PREFIX}/share/examples/Xfinans
-	${RM} ${PREFIX}/man/cat1/xfinans.0
+	${RM} -f ${PREFIX}/man/cat1/xfinans.0
 
 .include "../../mk/bsd.pkg.mk"
