--- a/x11/xlockmore/Makefile.common
+++ b/x11/xlockmore/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.33 2005/09/18 19:16:49 minskim Exp $
+# $NetBSD: Makefile.common,v 1.34 2005/11/05 06:19:57 hubertf Exp $
 #
 # This Makefile.common is included by:
 #
@@ -20,6 +20,7 @@ HOMEPAGE=	http://www.tux.org/~bagleyd/xlockmore.html
 
 CONFLICTS+=	xlockmore-[0-9]* xlockmore-lite-[0-9]*
 
+DIST_SUBDIR=		xlockmore-5.20.1v2
 DISTINFO_FILE?=		${.CURDIR}/../xlockmore/distinfo
 PATCHDIR?=		${.CURDIR}/../xlockmore/patches
 PLIST_SRC?=		${.CURDIR}/../xlockmore/PLIST
