--- a/fonts/efont-unicode/Makefile
+++ b/fonts/efont-unicode/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2005/05/15 22:02:27 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/07/15 18:27:50 jlam Exp $
 
 DISTNAME=	efont-unicode-bdf-0.4.2
 PKGNAME=	${DISTNAME:S/-bdf//}
@@ -11,7 +11,7 @@ HOMEPAGE=	http://openlab.ring.gr.jp/efont/unicode/
 COMMENT=	Free unicode BDF font
 
 USE_X11BASE=	YES
-USE_TOOLS+=	gzip
+USE_TOOLS+=	gzip mkfontdir:run
 
 MESSAGE_SUBST+=	FONTDIR=${FONTDIR}
 PLIST_SUBST+=	FONTDIR=${FONTDIR}
