--- a/devel/darcs/Makefile
+++ b/devel/darcs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2005/09/29 14:28:37 tonio Exp $
+# $NetBSD: Makefile,v 1.5 2005/11/08 18:50:03 tonio Exp $
 
 DISTNAME=		darcs-1.0.3
 PKGREVISION=	1
@@ -18,5 +18,5 @@ GNU_CONFIGURE=		yes
 
 .include "../../www/curl/buildlink3.mk"
 .include "../../lang/ghc/buildlink3.mk"
-.include "../../mk/latex.buildlink3.mk"
+.include "../../mk/tex.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
