--- a/www/p5-SVN-Web/Makefile
+++ b/www/p5-SVN-Web/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/07/13 18:01:48 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2005/08/06 06:19:40 jlam Exp $
 
 DISTNAME=	SVN-Web-0.35
 PKGNAME=	p5-${DISTNAME}
@@ -8,6 +8,8 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=OurNet/CLKAO/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Unstable snapshot of Subversion repository browser
+
+LATEX_ACCEPTED=	teTeX1 teTeX2 teTeX3
 
 DEPENDS+=	p5-subversion>=0.32.1:../../devel/p5-subversion
 DEPENDS+=	p5-Template-Toolkit>=2.10:../../www/p5-Template-Toolkit
@@ -26,9 +28,9 @@ DEPENDS+=	p5-XML-DOM>=1.43:../../textproc/p5-XML-DOM
 DEPENDS+=	p5-XML-Parser>=2.30:../../textproc/p5-XML-Parser
 DEPENDS+=	p5-XML-RSS>=0.9:../../textproc/p5-XML-RSS
 DEPENDS+=	p5-XML-XPath>=1.08:../../textproc/p5-XML-XPath
-DEPENDS+=	teTeX>=1.0.7:../../print/teTeX
 
 PERL5_PACKLIST=		auto/SVN/Web/.packlist
 
 .include "../../lang/perl5/module.mk"
+.include "../../mk/tex.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
