--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.3 2005/06/17 05:49:35 hira Exp $
+# $NetBSD: Makefile,v 1.4 2005/08/20 19:16:22 jlam Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	xfce4-session-${XFCE4_VERSION}
-PKGREVISION=	3
+#PKGREVISION=	1
 CATEGORIES=	x11
 COMMENT=	XFce4 session manager
 
