--- a/graphics/xfce4-artwork/Makefile
+++ b/graphics/xfce4-artwork/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2004/03/10 11:59:31 xtraeme Exp $
+# $NetBSD: Makefile,v 1.6 2004/10/03 00:14:58 tv Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -8,7 +8,7 @@ DISTNAME=	xfce4-artwork-${XFCE4_VERSION}
 PKGREVISION=	5
 CATEGORIES=	graphics
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
-COMMENT=	XFce4 artwork
+COMMENT=	Xfce artwork
 
 .include "../../x11/xfce4-desktop/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
