--- a/graphics/xfce4-icon-theme/Makefile
+++ b/graphics/xfce4-icon-theme/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2005/02/23 14:07:25 martti Exp $
+# $NetBSD: Makefile,v 1.3 2005/05/18 06:10:30 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	xfce4-icon-theme-${XFCE4_VERSION}
 CATEGORIES=	graphics
-COMMENT=	XFce4 icon themes
+COMMENT=	Xfce icon themes
 
 .include "../../mk/bsd.pkg.mk"
