--- a/print/xfce4-print/Makefile
+++ b/print/xfce4-print/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2005/03/31 18:12:29 drochner Exp $
+# $NetBSD: Makefile,v 1.11 2005/05/18 12:16:53 abs Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 PKGNAME=	xfce4-print-${XFCE4_VERSION}
 DISTNAME=	xfprint-${XFCE4_VERSION}
 CATEGORIES=	print
-COMMENT=	XFce4 print dialog
+COMMENT=	Xfce print dialog
 
 CONFIGURE_ARGS+=	--with-printcap=/etc/printcap
 
