--- a/sysutils/xfce4-cpugraph-plugin/Makefile
+++ b/sysutils/xfce4-cpugraph-plugin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2004/06/30 12:33:53 martti Exp $
+# $NetBSD: Makefile,v 1.3 2004/10/03 00:18:17 tv Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -8,7 +8,7 @@ DISTNAME=	xfce4-cpugraph-plugin-${XFCE4_VERSION}
 PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
-COMMENT=	XFce4 CPU load plugin
+COMMENT=	Xfce CPU load plugin
 
 WRKSRC=		${WRKDIR}/xfce4-cpugraph-plugin
 
