--- a/sysutils/xfce4-minicmd-plugin/Makefile
+++ b/sysutils/xfce4-minicmd-plugin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2004/12/08 08:54:26 martti Exp $
+# $NetBSD: Makefile,v 1.10 2005/01/17 13:23:03 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -7,7 +7,7 @@ XFCE4_VERSION=	0.3.0
 DISTNAME=	xfce4-minicmd-plugin-${XFCE4_VERSION}
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
-COMMENT=	XFce4 command plugin
+COMMENT=	Xfce command plugin
 
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
