--- a/sysutils/xfce4-showdesktop-plugin/Makefile
+++ b/sysutils/xfce4-showdesktop-plugin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2004/10/08 06:22:07 martti Exp $
+# $NetBSD: Makefile,v 1.8 2004/11/28 09:55:49 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -7,7 +7,7 @@ XFCE4_VERSION=	0.4.0
 DISTNAME=	xfce4-showdesktop-plugin-${XFCE4_VERSION}
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
-COMMENT=	XFce4 showdesktop plugin
+COMMENT=	Xfce showdesktop plugin
 
 WRKSRC=		${WRKDIR}/xfce4-showdesktop-plugin
 
