--- a/time/xfce4-calendar/Makefile
+++ b/time/xfce4-calendar/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/01/17 12:51:16 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	xfcalendar-${XFCE4_VERSION}
 PKGNAME=	xfce4-calendar-${XFCE4_VERSION}
 CATEGORIES=	time
-COMMENT=	XFce4 calendar
+COMMENT=	Xfce calendar
 
 .include "../../databases/dbh/buildlink3.mk"
 .include "../../x11/xfce4-mcs-plugins/buildlink3.mk"
