--- a/wm/xfce4-wm-themes/Makefile
+++ b/wm/xfce4-wm-themes/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.8 2004/10/03 00:18:23 tv Exp $
+# $NetBSD: Makefile,v 1.9 2005/01/17 12:56:13 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	xfwm4-themes-${XFCE4_VERSION}
 PKGNAME=	xfce4-wm-themes-${XFCE4_VERSION}
 CATEGORIES=	wm
-COMMENT=	XFce4 window manager themes
+COMMENT=	Xfce window manager themes
 
 .include "../../wm/xfce4-wm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
