--- a/x11/libxfce4gui/Makefile
+++ b/x11/libxfce4gui/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.12 2005/10/17 09:32:04 martti Exp $
+# $NetBSD: Makefile,v 1.13 2005/11/09 06:42:58 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	libxfcegui4-${XFCE4_VERSION}
 PKGNAME=	libxfce4gui-${XFCE4_VERSION}
 CATEGORIES=	x11
-COMMENT=	XFce4 widget library
+COMMENT=	Xfce widget library
 
 #PKGREVISION=	1
 
