--- a/x11/xfce4-gtk2-engines/Makefile
+++ b/x11/xfce4-gtk2-engines/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2005/05/18 06:10:31 martti Exp $
+# $NetBSD: Makefile,v 1.20 2005/11/09 06:42:59 martti Exp $
 #
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
@@ -9,7 +9,7 @@ DISTNAME=	gtk-xfce-engine-${XFCE4_VERSION}
 PKGNAME=	xfce4-gtk2-engine-${XFCE4_VERSION}
 #PKGREVISION=	1
 CATEGORIES=	x11
-COMMENT=	XFce4 GTK2 themes
+COMMENT=	Xfce GTK2 themes
 
 USE_DIRS+=	xdg-1.1
 
