--- a/x11/xfce4-toys/Makefile
+++ b/x11/xfce4-toys/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.10 2004/10/03 00:18:39 tv Exp $
+# $NetBSD: Makefile,v 1.11 2005/01/17 12:56:14 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	xfce4-toys-${XFCE4_VERSION}
 CATEGORIES=	x11
-COMMENT=	XFce4 toys
+COMMENT=	Xfce toys
 
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../x11/xfce4-panel/buildlink3.mk"
