--- a/databases/mysql-client/Makefile.common
+++ b/databases/mysql-client/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.47 2005/08/12 13:03:05 xtraeme Exp $
+# $NetBSD: Makefile.common,v 1.48 2005/09/27 00:13:29 xtraeme Exp $
 
 DISTNAME=		mysql-4.0.26
 CATEGORIES=		databases
@@ -54,7 +54,7 @@ CONFIGURE_ARGS+=	--with-vio
 CONFIGURE_ARGS+=	--with-charset=${MYSQL_CHARSET}
 CONFIGURE_ARGS+=	--with-extra-charsets=${MYSQL_EXTRA_CHARSET}
 
-.if !empty(MACHINE_ARCH:Mi386)
+.if !empty(MACHINE_ARCH:Mi386) && ${OPSYS} != "Interix"
 CONFIGURE_ARGS+=	--enable-assembler
 .endif
 
