--- a/databases/mysql4-client/Makefile.common
+++ b/databases/mysql4-client/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.44 2005/09/26 22:34:49 xtraeme Exp $
+# $NetBSD: Makefile.common,v 1.45 2005/10/29 14:14:00 xtraeme Exp $
 
 DISTNAME=		mysql-4.1.15
 CATEGORIES=		databases
@@ -67,7 +67,7 @@ CONFIGURE_ARGS+=	--with-vio
 CONFIGURE_ARGS+=	--with-charset=${MYSQL_CHARSET}
 CONFIGURE_ARGS+=	--with-extra-charsets=${MYSQL_EXTRA_CHARSET}
 
-.if !empty(MACHINE_ARCH:Mi386)
+.if !empty(MACHINE_ARCH:Mi386) && ${OPSYS} != "Interix"
 CONFIGURE_ARGS+=	--enable-assembler
 .endif
 
