--- a/games/adom/Makefile
+++ b/games/adom/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2004/01/20 12:15:39 agc Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/16 06:57:52 jlam Exp $
 #
 
 DISTNAME=	adom-111-elf
@@ -20,7 +20,7 @@ CHECK_SHLIBS=	NO
 .include "../../mk/bsd.prefs.mk"
 
 .if ${OPSYS} == "NetBSD"
-DEPENDS=	suse_base>=6.1:../../emulators/${SUSE_DIR_PREFIX}_base
+DEPENDS+=	suse_base>=6.1:../../emulators/${SUSE_DIR_PREFIX}_base
 .endif
 
 INSTALLATION_DIRS=	bin
