--- a/games/angband-x11/Makefile
+++ b/games/angband-x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.34 2005/04/11 21:45:48 tv Exp $
+# $NetBSD: Makefile,v 1.35 2005/06/01 18:02:49 jlam Exp $
 #
 
 DISTNAME=	angband-3.0.3
@@ -21,8 +21,8 @@ INCOMPAT_CURSES+=	NetBSD-1.6[A-M]-*
 
 SPOILERFILE=	angband-spoilers.tar.gz
 
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-setgid=games --prefix=${PREFIX}
+GNU_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--with-setgid=games
 
 .if ${MACHINE_ARCH} == "arm" || ${MACHINE_ARCH} == "arm32"
 GCC_REQD+=		2.95.3
