--- a/games/colchess/Makefile
+++ b/games/colchess/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2005/06/16 06:57:53 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/09/28 20:52:22 rillig Exp $
 
 DISTNAME=		colchess
 PKGNAME=		${DISTNAME}-7.0
@@ -10,7 +10,7 @@ MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.ast.cam.ac.uk/~cmf/chess/colchess/
 COMMENT=		Chess analysis engine
 
-DIST_SUBDIR=		${PKGNAME}
+DIST_SUBDIR=		${PKGNAME_NOREV}
 MAKE_ENV+=		PREFIX="${PREFIX}"
 NO_CONFIGURE=		yes
 WRKSRC=			${WRKDIR}/ColChess
