--- a/mail/courier-maildir/Makefile.common
+++ b/mail/courier-maildir/Makefile.common
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile.common,v 1.4 2005/10/20 20:26:15 jlam Exp $
+# $NetBSD: Makefile.common,v 1.5 2005/11/11 07:18:41 rillig Exp $
 #
-# Package Makefiles should include this file after setting PKGBASE and
+# Package Makefiles should include this file after setting PKGNAME and
 # PKG_SUPPORTED_OPTIONS.
 
 PKG_SYSCONFSUBDIR?=	courier
