--- a/mail/courier-imap/Makefile
+++ b/mail/courier-imap/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.42 2005/08/11 00:04:01 jlam Exp $
+# $NetBSD: Makefile,v 1.43 2005/10/20 20:26:23 jlam Exp $
 
 DISTNAME=	courier-imap-4.0.6
-PKGBASE=	${DISTNAME:C/-[^-]*$//}
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=courier/}
 EXTRACT_SUFX=	.tar.bz2
@@ -16,6 +15,8 @@ USE_TOOLS+=		env gmake perl
 USE_LANGUAGES=		c c++
 USE_LIBTOOL=		yes
 
+# PKGNAME is a parameter to the following file
+PKGNAME=	${DISTNAME}
 .include "../../mail/courier-maildir/Makefile.common"
 
 CONFIGURE_ARGS+=	--datadir=${PREFIX}/share/courier
